Add music, animation and post-processing

--- a/assets/settings.toml
+++ b/assets/settings.toml
@@ -3,5 +3,17 @@ speed = 15.0
 brain_position = [0, -5.0, 0]
 brain_scale = 0.5
 shadow_bias = 0.1
-ambient_light = [0.1, 0.02, 0.15, 1.0]
-ambient_brightness = 1000
+ambient_light = [0.05, 0.02, 0.03, 1.0]
+ambient_brightness = 10000
+camera_speed = 0.5
+camera_rotation_speed = 5.0
+initial_camera_distance = 10.0
+camera_spin_time = 24.0
+camera_spin_falloff = 5.0
+end_time = 40.0
+harmonic_spinup_time = 3.0
+thought_speed = 0.3
+thought_appear_time = 15.0
+thought_initial_height = 2.0
+f_stops = 0.3
+slowdown_rate = 100.0
