--- a/assets/thought.sh.toml
+++ b/assets/thought.sh.toml
@@ -1,5 +1,5 @@
 amplitudes = [
-    7.0,
+    1.5,
     1.0,
     1.0,
     1.0,
@@ -8,6 +8,18 @@ amplitudes = [
     1.0,
     1.0,
     1.0,
+]
+
+biases = [
+    2.0,
+    0.0,
+    0.0,
+    0.0,
+    0.0,
+    0.0,
+    0.0,
+    0.0,
+    0.0,
 ]
 
 phases = [
@@ -23,7 +35,6 @@ phases = [
 ]
 
 frequencies = [
-    0.0,
     0.2,
     0.3,
     0.5,
@@ -31,5 +42,18 @@ frequencies = [
     0.11,
     0.13,
     0.17,
-    0.19
+    0.19,
+    0.23
+]
+
+start = [
+    15.0,
+    24.0,
+    24.0,
+    24.0,
+    40.0,
+    40.0,
+    40.0,
+    40.0,
+    40.0,
 ]
