--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 bevy = { version = "0.15.2", features = ["file_watcher"] }
 bevy_common_assets = { version = "0.12.0", features = ["toml"] }
+bevy_kira_audio = { version = "0.22.0", features = ["mp3"] }
 serde = { version = "1" }
 
 # Enable max optimizations for dependencies, but not for our code:
