Finish off animation and fix music issues

--- a/assets/settings.toml
+++ b/assets/settings.toml
@@ -10,10 +10,12 @@ camera_rotation_speed = 5.0
 initial_camera_distance = 10.0
 camera_spin_time = 24.0
 camera_spin_falloff = 5.0
-end_time = 40.0
+end_time = 70.0
 harmonic_spinup_time = 3.0
 thought_speed = 0.3
 thought_appear_time = 15.0
 thought_initial_height = 2.0
 f_stops = 0.3
 slowdown_rate = 100.0
+additional_thoughts_time = 30.0
+num_additional_thoughts = 100
