--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 bevy = { version = "0.15.2", features = ["file_watcher"] }
 bevy_common_assets = { version = "0.12.0", features = ["toml"] }
 bevy_kira_audio = { version = "0.22.0", features = ["mp3"] }
+kira = { version = "0.9.6", default-features = false, features = ["cpal"] }
 serde = { version = "1" }
 
 # Enable max optimizations for dependencies, but not for our code:
